# DeiviTech-VoiceHub

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  INSTALL.md  QUICK-START.md  README.md  RELEASE_NOTES.md  RESUMO-CONFIRMAR-FALA.md  SOLUTION.md  STATUS.md  TESTE-CONFIRMAR-FALA.md  WORKFLOW-DITADO.md  justfile  package.json  setup-ydotool.sh  test-applet.sh  voicehub.sh
.config/: com.deivisan.voicehub.desktop
docs/: COSMIC_APPLET_PROPOSAL.md  RELEASE_v0.0.2.md  SESSION_SUMMARY.md  TESTING_GUIDE.md
legacy/: README.md  start-voicehub.sh  voicehubctl
legacy/src/: server.ts
legacy/src-tauri/: Cargo.toml  tauri.conf.json
legacy/src-tauri/icons/: icon.icns
legacy/src/public/: app.js  index.html
scripts/: voicehub-cli
src/: app.rs  config.rs  main.rs  server.ts  speech_recognition.rs  text_inject.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/i18n/en/: cosmic_applet_voicehub.ftl
src/i18n/pt/: cosmic_applet_voicehub.ftl
src/public/: app.js  index.html
voicehub-daemon/: ARCHITECTURE.md  Cargo.toml  README.md  test-components.sh  test-daemon.sh
voicehub-daemon/src/: hotkey.rs  inject.rs  main.rs  speech.rs
