[package]
name = "cosmic-applet-voicehub"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Voice dictation applet for COSMIC Desktop"
authors = ["Deivison Santana <deivisan@example.com>"]
rust-version = "1.75"

[dependencies]
# Core COSMIC
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", default-features = false, features = ["applet", "wayland", "tokio", "winit"] }

# Async runtime
tokio = { version = "1.35", features = ["rt", "sync", "time", "process"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Clipboard
arboard = "3.3"

# Utils
log = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[profile.dev]
opt-level = 1
