[package]
name = "deivitech-voicehub"
version = "0.1.0"
description = "Real-time voice dictation system with Web Speech API"
authors = ["Deivison Santana <deivisan>"]
license = "MIT"
repository = "https://github.com/deivisan/DeiviTech-VoiceHub"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
