[package]
name = "voicehub-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
# Hotkey global (Wayland nativo!)
hotkey-listener = "0.3"

# System tray (cross-desktop)
tray-icon = "0.18"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Utils
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
